commented and simplified main code, some renaming, logging

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -146,7 +146,7 @@
                             <h3 id="name-label-captures" class="content-label2 directory-label">Captures</h3>
 
                             <div class="storage-ctr">
-                                <span id="path-label2-captures" class="directory-label2">C:/Directory/Example</span>
+                                <span id="directory-label2-captures" class="directory-label2">C:/Directory/Example</span>
 
                                 <div class="directory-label-ctr">
                                     <span id="usage-label3-captures" class="directory-label3">7 Videos - 32GB</span>
@@ -156,10 +156,7 @@
 
                             <div class="directory-bar">
                                 <select class="directory-setting-field" name="capturesGameFilter">
-                                    <option value="All">All</option>
-                                    <option value="Valorant">Valorant</option>
-                                    <option value="Notepad">Notepad</option>
-                                    <option value="External">External</option>
+                                    <option value="all">All</option>
                                 </select>
 
                                 <select class="directory-setting-field" name="capturesMetaFilter">
@@ -203,7 +200,7 @@
                             <h3 id="name-label-clips" class="content-label2 directory-label">Clips</h3>
 
                             <div class="storage-ctr">
-                                <span id="path-label2-clips" class="directory-label2">C:/Directory/Example</span>
+                                <span id="directory-label2-clips" class="directory-label2">C:/Directory/Example</span>
 
                                 <div class="directory-label-ctr">
                                     <span id="usage-label3-clips" class="directory-label3">7 Videos - 32GB</span>
@@ -213,10 +210,7 @@
 
                             <div class="directory-bar">
                                 <select class="directory-setting-field" name="clipsGameFilter">
-                                    <option value="All">All</option>
-                                    <option value="League of Legends">League of Legends</option>
-                                    <option value="Valorant">Valorant</option>
-                                    <option value="External">External</option>
+                                    <option value="all">All</option>
                                 </select>
 
                                 <select class="directory-setting-field" name="clipsMetaFilter">
@@ -498,7 +492,7 @@
                                     <use href="../assets/svg/folder-open-solid.svg#folder-open-solid"></use>
                                 </svg>
 
-                                <input class="general-setting-field" type="text" name="capturesPath" readonly>
+                                <input class="general-setting-field" type="text" name="capturesDirectory" readonly>
                             </div>
 
                             <p class="general-setting-description">Your captures will be saved in this location.</p>
@@ -595,7 +589,7 @@
                                     <use href="../assets/svg/desktop-windows-solid.svg#desktop-windows-solid"></use>
                                 </svg>
 
-                                <select class="general-setting-field" name="capturesDisp">
+                                <select class="general-setting-field" name="capturesDisplay">
                                 </select>
                             </div>
 
@@ -682,7 +676,7 @@
                                     <use href="../assets/svg/folder-open-solid.svg#folder-open-solid"></use>
                                 </svg>
 
-                                <input class="general-setting-field" type="text" name="clipsPath" readonly>
+                                <input class="general-setting-field" type="text" name="clipsDirectory" readonly>
                             </div>
 
                             <p class="general-setting-description">Your clips will be saved in this location.</p>
@@ -769,7 +763,7 @@
                                     </svg>
 
                                     <select class="general-setting-field" name="speaker">
-                                        <option value="Default">Default</option>
+                                        <option value="default">Default</option>
                                     </select>
                                 </div>
                             </div>
@@ -804,7 +798,7 @@
                                     </svg>
 
                                     <select class="general-setting-field" name="microphone">
-                                        <option value="Default">Default</option>
+                                        <option value="default">Default</option>
                                     </select>
                                 </div>
                             </div>
