removed unused variables, fixed volume sliders, fix ipc naming

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -251,7 +251,7 @@
                 </div>
             </section>
 
-            <section id="section-editor" class="content-section active">
+            <section id="section-editor" class="content-section">
                 <h2 class="content-label1">Editor</h2>
 
                 <hr class="content-divider1">
@@ -428,7 +428,7 @@
                 </div>
             </section>
 
-            <section id="section-settings" class="content-section">
+            <section id="section-settings" class="content-section active">
                 <h2 class="content-label1">Settings</h2>
 
                 <hr class="content-divider1">
