reduced repeated code on sliders

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -135,7 +135,7 @@
         <div id="block-content">
             <p id="status-label-content">An error has occurred!</p>
 
-            <section id="section-directories" class="content-section">
+            <section id="section-directories" class="content-section active">
                 <h2 class="content-label1">Directories</h2>
 
                 <hr class="content-divider1">
@@ -252,7 +252,7 @@
             </section>
 
             <section id="section-editor" class="content-section">
-                <h2 class="content-label1">Editor</h2>
+                <h2 id="game-label-editor" class="content-label1">Editor</h2>
 
                 <hr class="content-divider1">
 
@@ -281,17 +281,17 @@
                                     </svg>
                                 </button>
 
-                                <button id="bar-btn-volume" class="media-bar-btn">
-                                    <svg id="bar-icon-volume" class="media-bar-icon">
+                                <button id="bar-btn-video-volume" class="media-bar-btn">
+                                    <svg id="bar-icon-video-volume" class="media-bar-icon">
                                         <use href="../assets/svg/volume-down-solid.svg#volume-down-solid"></use>
                                     </svg>
                                 </button>
 
-                                <div id="slider-ctr-volume" class="media-slider-ctr" tabindex="0">
-                                    <div id="slider-volume" class="media-slider">
-                                        <div id="track-volume" class="media-track">
-                                            <div id="overlay-volume" class="media-overlay"></div>
-                                            <div id="thumb-volume" class="media-thumb"></div>
+                                <div id="slider-ctr-video-volume" class="media-slider-ctr" tabindex="0">
+                                    <div id="slider-video-volume" class="media-slider">
+                                        <div id="track-video-volume" class="media-track">
+                                            <div id="overlay-video-volume" class="media-overlay"></div>
+                                            <div id="thumb-video-volume" class="media-thumb"></div>
                                         </div>
                                     </div>
                                 </div>
@@ -428,7 +428,7 @@
                 </div>
             </section>
 
-            <section id="section-settings" class="content-section active">
+            <section id="section-settings" class="content-section">
                 <h2 class="content-label1">Settings</h2>
 
                 <hr class="content-divider1">
@@ -776,11 +776,11 @@
                                         <use href="../assets/svg/volume-down-solid.svg#volume-down-solid"></use>
                                     </svg>
 
-                                    <div class="general-setting-slider-ctr">
-                                        <div id="slider-speaker-volume" class="general-setting-slider">
-                                            <div id="track-speaker-volume" class="general-setting-track">
-                                                <div id="overlay-speaker-volume" class="general-setting-overlay"></div>
-                                                <div id="thumb-speaker-volume" class="general-setting-thumb"></div>
+                                    <div id="setting-slider-ctr-speaker-volume" class="general-setting-slider-ctr">
+                                        <div id="setting-slider-speaker-volume" class="general-setting-slider">
+                                            <div id="setting-track-speaker-volume" class="general-setting-track">
+                                                <div id="setting-overlay-speaker-volume" class="general-setting-overlay"></div>
+                                                <div id="setting-thumb-speaker-volume" class="general-setting-thumb"></div>
                                             </div>
                                         </div>
                                     </div>
@@ -811,11 +811,11 @@
                                         <use href="../assets/svg/volume-down-solid.svg#volume-down-solid"></use>
                                     </svg>
 
-                                    <div class="general-setting-slider-ctr">
-                                        <div id="slider-microphone-volume" class="general-setting-slider">
-                                            <div id="track-microphone-volume" class="general-setting-track">
-                                                <div id="overlay-microphone-volume" class="general-setting-overlay"></div>
-                                                <div id="thumb-microphone-volume" class="general-setting-thumb"></div>
+                                    <div id="setting-slider-ctr-microphone-volume" class="general-setting-slider-ctr">
+                                        <div id="setting-slider-microphone-volume" class="general-setting-slider">
+                                            <div id="setting-track-microphone-volume" class="general-setting-track">
+                                                <div id="setting-overlay-microphone-volume" class="general-setting-overlay"></div>
+                                                <div id="setting-thumb-microphone-volume" class="general-setting-thumb"></div>
                                             </div>
                                         </div>
                                     </div>
