reduced time setting code, more constants, fixed clipping function, css cursor fixes

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -356,7 +356,7 @@
                             <use href="../assets/svg/movie-edit-solid.svg#movie-edit-solid"></use>
                         </svg>
                         
-                        <div id="bar-clip" class="active">
+                        <div id="bar-clip" class="">
                             <div class="clip-setting-ctr">
                                 <h4 class="clip-setting-label">Clip Width</h4>
 
