gallery text overflow fixes, added screenshot mode

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -135,7 +135,7 @@
         <div id="block-content">
             <p id="status-label-content">An error has occurred!</p>
 
-            <section id="section-directories" class="content-section active">
+            <section id="section-directories" class="content-section">
                 <h2 class="content-label1">Directories</h2>
 
                 <hr class="content-divider1">
@@ -428,7 +428,7 @@
                 </div>
             </section>
 
-            <section id="section-settings" class="content-section">
+            <section id="section-settings" class="content-section active">
                 <h2 class="content-label1">Settings</h2>
 
                 <hr class="content-divider1">
