fixed recording timer throttling and reading corrupted videos, added more efficient video adding/deleting

--- a/CC-Electron/src/renderer/index.html
+++ b/CC-Electron/src/renderer/index.html
@@ -91,7 +91,7 @@
 
     <div id="area-client">
         <div id="block-nav">
-            <nav id="bar-nav" class="active">
+            <nav id="bar-nav">
                 <div id="display-brand">
                     <svg id="icon-brand">
                         <use href="../assets/svg/capcha.svg#capcha"></use>
@@ -149,7 +149,7 @@
         <div id="block-content">
             <p id="status-label-content">An error has occurred!</p>
 
-            <section id="section-directories" class="content-section">
+            <section id="section-directories" class="content-section active">
                 <h2 class="content-label1">Directories</h2>
 
                 <hr class="content-divider1">
@@ -442,7 +442,7 @@
                 </div>
             </section>
 
-            <section id="section-settings" class="content-section active">
+            <section id="section-settings" class="content-section">
                 <h2 class="content-label1">Settings</h2>
 
                 <hr class="content-divider1">
@@ -533,6 +533,7 @@
                             </div>
 
                             <p class="general-setting-description">When storage limit is exceeded, the oldest captures will be deleted automatically.</p>
+                            <p class="general-setting-description">Only direct captures (not in subdirectories) will be counted.</p>
                         </div>
 
                         <div class="general-setting-ctr">
@@ -730,7 +731,8 @@
                                 </select>
                             </div>
 
-                            <p class="general-setting-description">When storage limit is exceeded, the oldest videos will be deleted automatically.</p>
+                            <p class="general-setting-description">When storage limit is exceeded, the oldest clips will be deleted automatically.</p>
+                            <p class="general-setting-description">Only direct clips (not in subdirectories) will be counted.</p>
                         </div>
 
                         <div class="general-setting-ctr">
